Use Map.of instead of emptyMap