@@ -2,7 +2,6 @@ package io.activej.serializer;
 
 import io.activej.codegen.expression.Expression;
 
-import java.util.Collections;
 import java.util.Map;
 import java.util.Set;
 
@@ -30,21 +29,21 @@ public abstract class AbstractSerializerDef implements SerializerDef {
 
 	@Override
 	public Map<Object, Expression> getEncoderInitializer() {
-		return Collections.emptyMap();
+		return Map.of();
 	}
 
 	@Override
 	public Map<Object, Expression> getDecoderInitializer() {
-		return Collections.emptyMap();
+		return Map.of();
 	}
 
 	@Override
 	public Map<Object, Expression> getEncoderFinalizer() {
-		return Collections.emptyMap();
+		return Map.of();
 	}
 
 	@Override
 	public Map<Object, Expression> getDecoderFinalizer() {
-		return Collections.emptyMap();
+		return Map.of();
 	}
 }
