@@ -30,6 +30,7 @@ import java.util.*;
 import static io.activej.bytebuf.ByteBufStrings.encodeAscii;
 import static io.activej.http.HttpUtils.trimAndDecodePositiveInt;
 import static io.activej.uikernel.Utils.fromJson;
+import static java.util.Collections.unmodifiableMap;
 
 @SuppressWarnings("unused")
 public final class ReadSettings<K> {
@@ -95,9 +96,9 @@ public final class ReadSettings<K> {
 		Map<String, String> filters;
 		if (filtersParameter != null && !filtersParameter.isEmpty()) {
 			filters = fromJson(gson, filtersParameter, MAP_STRING_STRING_TYPE_TOKEN);
-			filters = Collections.unmodifiableMap(filters);
+			filters = unmodifiableMap(filters);
 		} else {
-			filters = Collections.emptyMap();
+			filters = Map.of();
 		}
 
 		String sortParameter = request.getQueryParameter("sort");
@@ -114,9 +115,9 @@ public final class ReadSettings<K> {
 				value = SortOrder.of(arr.get(1).getAsString());
 				sort.put(key, value);
 			}
-			sort = Collections.unmodifiableMap(sort);
+			sort = unmodifiableMap(sort);
 		} else {
-			sort = Collections.emptyMap();
+			sort = Map.of();
 		}
 
 		String extraParameter = request.getQueryParameter("extra");
